--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "homepage": "http://www.hilandsoft.com/",
     "keywords": ["php","tags","codecs"],
     "type": "library",
-    "license": "GPL",
+    "license": "GPL",    
+    "version": "1.0.0",
     "require": {
         "php": "^5.3.3 || ^7.0",
         "another-vendor/package": "1.*"
