--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,6 @@
     "license": "GPL",    
     "version": "1.0.0",
     "require": {
-        "php": "^5.3.3 || ^7.0",
+        "php": "^5.3.3 || ^7.0"
     }
 }
