给"dev-master": "1.0.x-dev"添加别名

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,10 @@
     "version": "1.0.0",
     "require": {
         "php": "^5.3.3 || ^7.0"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "10.0.x-dev"
+        }
     }
 }
