--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "keywords": ["php","tags","codecs"],
     "type": "library",
     "license": "GPL",
+    "version": "1.0.0",
     "require": {
         "php": "^5.3.3 || ^7.0"
     },
