--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rainytop/Basiclibary.php",
+    "name": "rainytop/basiclibary.php",
     "description": "rainytop's php basic libary.",
     "homepage": "http://www.hilandsoft.com/",
     "keywords": ["php","tags","codecs"],
