修改文件内变量可见性

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "hiland/basiclibary.php",
-    "description": "rainytop's php basic libary.",
+    "description": "rainytop's php basic library.",
     "homepage": "http://www.hilandsoft.com/",
     "keywords": ["php","tags","codecs"],
     "type": "library",
