--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "rainytop/phpbasiclibary",
+    "name": "rainytop/basiclibrary.php",
     "description": "rainytop's php basic libary.",
     "homepage": "http://www.hilandsoft.com/",
-    "keywords": ["php","tags","codecs"],
+    "keywords": ["php","basic library","codecs"],
     "type": "library",
     "license": "Apache-2.0",
     "require": {
-        "php": "^5.3.3 || ^7.0",
+        "php": "^5.4",
         "alibabacloud/sdk": "^1.8"
     },
     "extra": {
