修改品牌名称

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rainytop/basiclibrary.php",
+    "name": "hiland/basiclibrary.php",
     "description": "rainytop's php basic libary.",
     "homepage": "http://www.hilandsoft.com/",
     "keywords": ["php","basic library","codecs"],
