--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,15 @@
     "type": "library",
     "license": "Apache-2.0",
     "require": {
-        "php": "^5.3.3 || ^7.0",
+        "php": "^5.3.3 || ^7.4",
         "alibabacloud/sdk": "^1.8"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "9.*"
     },
     "autoload": {
         "psr-4": {
+            "Hiland\\Test\\": "",
             "Hiland\\": ""
         }
     }
