--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "type": "library",
     "license": "Apache-2.0",
     "require": {
-        "php": "^5.3.3 || ^7.4",
-        "alibabacloud/sdk": "^1.8"
+        "php": "^5.3.3 || ^7.4"
     },
     "require-dev": {
         "phpunit/phpunit": "9.*"
