添加单向链表功能

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "psr-4": {
             "Hiland\\Test\\": "",
             "Hiland\\": ""
-        }
+        },
+        "files": [
+            "Utils/Common/functions.php"
+        ]
     }
 }
