docs: 添加config文件的说明

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,9 @@
 ;配置文件,必须包含两个部分:[section]和node
 
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; 以下内容全部为单元测试的数据。正式项目的时候，可以(连同本句注释)全部删除。
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
 [base]
 host = localhost
 user = testUser
