--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "注释说明":"以下内容全部为单元测试的数据。正式项目的时候，可以(连同本句注释)全部删除。",
+  "_comment":"以下内容全部为单元测试的数据。正式项目的时候，可以(连同本句注释)全部删除。",
   "1": {
     "0": "a",
     "1": "b",
