docs: 修改README.md信息

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "hiland/basiclibrary.php",
-  "description": "rainytop's php basic library.",
-  "homepage": "http://www.hilandsoft.com/",
+  "description": "rainytop/hiland 's php basic library.",
+  "homepage": "http://www.rainytop.com/",
   "keywords": [
     "php",
     "basic library",
