--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   "license": "Apache-2.0",
   "require": {
     "php": "^5.3.3 || ^7.4",
-    "ext-mbstring": "*"
+    "ext-mbstring": "*",
+    "topthink/think-orm": "2.*"
   },
   "require-dev": {
     "phpunit/phpunit": "9.*"
