--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require": {
     "php": "^5.3.3 || ^7.4",
     "ext-mbstring": "*",
-    "topthink/think-orm": "2.*"
+    "topthink/think-orm": "2.*",
+    "symfony/options-resolver": "^5.4"
   },
   "require-dev": {
     "phpunit/phpunit": "9.*"
