--- a/.env
+++ b/.env
@@ -8,3 +8,13 @@ address = env.address
 [users:base]
 database = users
 
+
+[database_mysql]
+hostname=127.0.0.1
+database=mydemo
+username=root
+password=
+prefix=tmp_
+charset=utf8
+debug=true
+
