perf: 对放射的应用进行统一规整

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Hiland\\Test\\": "",
+      "Hiland\\Test\\": "test",
       "Hiland\\": ""
     },
     "files": [
