--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "php": "^5.3.3 || ^7.4",
     "ext-mbstring": "*",
     "topthink/think-orm": "2.*",
-    "symfony/options-resolver": "^5.4"
+    "symfony/options-resolver": "^5.4",
+    "ext-json": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "9.*"
