--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,12 @@
     "ext-mbstring": "*",
     "topthink/think-orm": "2.*",
     "symfony/options-resolver": "^5.4",
-    "ext-json": "*"
+    "ext-json": "*",
+    "ext-libxml": "*",
+    "ext-simplexml": "*",
+    "ext-bcmath": "*",
+    "ext-iconv": "*",
+    "ext-gd": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "9.*"
