--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Hiland\\Test\\": "test",
+      "Hiland\\Test\\": "_test",
       "Hiland\\": ""
     },
     "files": [
