style: 添加.editorconfig，统一管理软件代码风格

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "hiland/basiclibrary.php",
-  "description": "rainytop/hiland 's php basic library.",
+  "description": "RainyTop & Hiland 's php basic library.",
   "homepage": "http://www.rainytop.com/",
   "keywords": [
     "php",
