--- a/_test/_misc/.env
+++ b/_test/_misc/.env
@@ -13,7 +13,7 @@ database = users
 hostname=127.0.0.1
 database=mydemo
 username=root
-password=
+password=root
 prefix=tmp_
 charset=utf8
 debug=true
