--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "php": "^8.0",
     "ext-mbstring": "*",
-    "topthink/think-orm": "2.*",
+    "topthink/think-orm": "^3.0",
     "symfony/options-resolver": "^5.4",
     "ext-json": "*",
     "ext-libxml": "*",
