--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "hiland/basiclibrary.php",
   "description": "RainyTop & Hiland 's php basic library.",
-  "homepage": "http://www.rainytop.com/",
+  "homepage": "https://www.rainytop.com/",
   "keywords": [
     "php",
     "basic library",
