chore: 调整的git可以控制的内容

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,5 @@
 !.idea/runConfigurations/
 !.idea/vcs.xml
 !.idea/modules.xml
-!.idea/.dictionaries/project.xml
+!.idea/dictionaries/project.xml
 !*.iml
