feat(tools): 添加项目列表生成工具
- 在 .gitignore 中添加 /src/00.ITEMLIST.md 忽略规则
- 在 ArrayHelper.php 中添加类描述注释
- 在 composer.json 的 autoload 配置中添加 Hiland\Tools 命名空间映射
- 新增 ItemListGenerator.php 文件实现目录扫描和 markdown 生成功能
- 新增 ExportInfo 类用于存储文件信息
- 新增 main.php 作为工具入口文件
- 实现自动生成 00.ITEMLIST.md 文件的功能

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
   "autoload": {
     "psr-4": {
       "Hiland\\Test\\": "tests",
-      "Hiland\\": "src"
+      "Hiland\\": "src",
+      "Hiland\\Tools\\": "tools"
     },
     "files": [
       "src/Common/functions.php"
